# SpecRec

./: .gitignore  LEIS_intens_correction_factors_generator.py  LEIS_quantitative_analysis.py  LEIS_tools.py  README.md  cross-section.py  ex12_Ne6keV140deg_GdBaCo.py  ex1_Ne6keV140deg_GdBaCo.py  ex1_ResDep_Ne6keV140deg_GdBaCo.py  ex2_Ne11keV32deg_WCr.py  ex2_ResDep_Ne11keV32deg_WCr.py  ex31_H18keV38deg_AuSi.py  ex31_ResDep_H18keV38deg_AuSi.py  ex32_H25keV32deg_LiW.py  ex32_ResDep_H25keV32deg_LiW.py  ex3_Ar20keV32deg_HDW.py  ex3_ResDep_H25keV32deg_LiW.py  ex41_ResDep_Ne18keV32deg_HDW.py  ex41_ResDep_Ne2keV45deg_HDW.py  ex42_ResDep_Ar20keV32deg_HDWthin.py  ex4_H18keV38deg_AuSi.py  ex4_Ne18keV32deg_HDW.py  ex4_ResDep_Ne18keV32deg_HDW.py  ex4_ResDep_Ne2keV45deg_HDW.py  ex5_Ar20keV32deg_HDWthin.py  ex5_H25keV32deg_LiW.py  ex5_NoiseDep_Ne6keV140deg_GdBaCo.py  ex5_ResDep_Ar20keV32deg_HDWthin.py  ex6_Ne6keV140deg_GdBaCo.py  ex6_NoiseDep_Ne6keV140deg_GdBaCo.py  ex6_TransFuncErrorDep_Ne6keV140deg_GdBaCo.py  general_plots.py  main_example.ipynb  pyproject.toml  requirements.txt  spectraConvDeconvLib.py
examples for ISI2025 conference/: DependencesOnAngle.py  SemiEmpirical_exp_spectra_examples for ISI2025.py  SemiRef_exp_spectra_examples for ISI2025.py  exp_spectra_examples for ISI2025.py  experimental_spectra_analysis.py  simulation_spectra_analysis.py
examples for j.apsusc.2024.161006/: ex1_ResDep_Ne6keV140deg_GdBaCo.py  ex2_ResDep_Ne11keV32deg_WCr.py  ex31_ResDep_H18keV38deg_AuSi.py  ex3_ResDep_H25keV32deg_LiW.py  ex41_ResDep_Ne18keV32deg_HDW.py  ex4_ResDep_Ne2keV45deg_HDW.py  (+4 more)
(+91 files in other folders)
