[project]
name = "specrec"
version = "0.1.0"
description = "The program for the analysis of low-energy ions scattering spectroscopy data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brokenaxes>=0.6.2",
    "inteq>=0.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
]
